fix(radio): prevent disappearing radio with negative z-index
Fixed an issue where radio would disappear when their parent
had a background color due to negative z-index.

--- a/src/components/radio/_radio.scss
+++ b/src/components/radio/_radio.scss
@@ -20,6 +20,7 @@
     @include utils.absolute-center();
     @include utils.size(100%);
     @include utils.min-size(tokens.$flexy-sys-ref-touch-size);
+    z-index: 1;
   }
 
   &__circle {
@@ -32,8 +33,8 @@
         _token('state-transition-easing'),
       border _token('state-transition-duration')
         _token('state-transition-easing');
+    pointer-events: none;
     @include utils.absolute-fill();
-    z-index: -1;
 
     &::before {
       content: '';
